removed google anaytics

--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -14,41 +14,40 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Paladin Cloud</title>
-    <base href="/" />
-    <meta charset="utf-8" />
-    <meta
-      http-equiv="Cache-control"
-      content="no-cache, no-store, must-revalidate"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-    <meta name="application-version" content="app-version - v2.2.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-    <style type="text/css">
-      .app-loading {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-      }
-    </style>
-  </head>
+<head>
+  <title>Paladin Cloud</title>
+  <base href="/" />
+  <meta charset="utf-8" />
+  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="application-version" content="app-version - v2.2.0" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
 
-  <body>
-    <app-root>
-      <div class="app-loading">
-        <div class="logo"></div>
-      </div>
-    </app-root>
+  <style type="text/css">
+    .app-loading {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+  </style>
+</head>
 
-  </body>
+<body>
+  <app-root>
+    <div class="app-loading">
+      <div class="logo"></div>
+    </div>
+  </app-root>
+
+</body>
+
 </html>
