fix : push slack and jira notifications into same SNS as email notifications

--- a/lambda-functions/notification-template-formatter-service/src/main/resources/autofixExemptedForViolation.html
+++ b/lambda-functions/notification-template-formatter-service/src/main/resources/autofixExemptedForViolation.html
@@ -3,16 +3,13 @@
 <head>
   <style>
 
-.a {
+.rowkey {
   font-family: Courier, Arial;
   font-weight: bold;
+  width: 250px;
 }
 
-.leftWidth {
-	width: 150px;
-}
-
-.b {
+.summary {
   font-family: Calibri, Verdana;
   font-size: 15px;
 }
@@ -40,27 +37,31 @@ text-decoration : none;
 
 <br>
 
-<div class="b">Autofix is not applied for violation with id <a href="${issueIdLink}">"${issueId}"</a> because exemption is granted for violation.</div>
+<div class="summary">Autofix is not applied for violation with id <a href="${issueIdLink}">"${issueId}"</a> because exemption is granted for violation.</div>
 
 <br><br>
 
-<table style="width:500px">
+<table style="width:800px">
 
   <tr>
-    <td class="a">Policy Name</td>
+    <td class="rowkey">Policy Name</td>
     <td><a href="${policyNameLink}">${policyName}</a></td>
   </tr>
   <tr>
-    <td class="a leftWidth">Resource ID</td>
+    <td class="rowkey">Resource ID</td>
     <td><a href="${resourceIdLink}">${resourceId}</a></td>
   </tr>
   <tr>
-    <td class="a">Severity</td>
+    <td class="rowkey">Severity</td>
     <td>${severity}</td>
   </tr>
   <tr>
-    <td class="a">Discovered On</td>
+    <td class="rowkey">Discovered On</td>
     <td>${discoveredOn}</td>
+  </tr>
+  <tr>
+    <td class="rowkey">Source</td>
+    <td>${source}</td>
   </tr>
 </table>
 
