--- a/lambda-functions/notification-template-formatter-service/src/main/resources/createStickyExEmailTemplate.html
+++ b/lambda-functions/notification-template-formatter-service/src/main/resources/createStickyExEmailTemplate.html
@@ -3,16 +3,13 @@
 <head>
     <style>
 
-.a {
+.rowkey {
   font-family: Courier, Arial;
   font-weight: bold;
+  width: 250px;
 }
 
-.leftWidth {
-	width: 150px;
-}
-
-.b {
+.summary {
   font-family: Calibri, Verdana;
   font-size: 15px;
 }
@@ -40,26 +37,34 @@ text-decoration : none;
 
 <br>
 
-<div class="b">Sticky Exception is created with name "${exceptionName}" for the below asset group and policies.</div>
+<div class="summary">Sticky Exception is created with name "${exceptionName}" for the below asset group and policies.</div>
 
 <br><br>
 
-<table style="width:500px">
+<table style="width:800px">
     <tr>
-        <td class="a">Asset Group</td>
+        <td class="rowkey">Asset Group</td>
         <td>${assetGroup}</td>
     </tr>
     <tr>
-        <td class="a">Exception Reason</td>
+        <td class="rowkey">Exception Reason</td>
         <td>${exceptionReason}</td>
     </tr>
     <tr>
-        <td class="a">Exception Expiration Date</td>
+        <td class="rowkey">Exception Expiration Date</td>
         <td>${expiringOn}</td>
     </tr>
     <tr>
-        <td class="a">Policy Names</td>
+        <td class="rowkey">Policy Names</td>
         <td>${policyNames}</td>
+    </tr>
+    <tr>
+        <td class="rowkey">Created By</td>
+        <td>${userId}</td>
+    </tr>
+    <tr>
+        <td class="rowkey">Source</td>
+        <td>${source}</td>
     </tr>
 </table>
 
