--- a/lambda-functions/notification-template-formatter-service/src/main/resources/deleteStickyExEmailTemplate.html
+++ b/lambda-functions/notification-template-formatter-service/src/main/resources/deleteStickyExEmailTemplate.html
@@ -3,16 +3,13 @@
 <head>
     <style>
 
-.a {
+.rowkey {
   font-family: Courier, Arial;
   font-weight: bold;
+  width: 250px;
 }
 
-.leftWidth {
-	width: 150px;
-}
-
-.b {
+.summary {
   font-family: Calibri, Verdana;
   font-size: 15px;
 }
@@ -40,7 +37,19 @@ text-decoration : none;
 
 <br>
 
-<div class="b">Sticky Exception  "${exceptionName}" is deleted.</div>
+<div class="summary">Sticky Exception  "${exceptionName}" is deleted.</div>
+<br><br>
+
+<table style="width:800px">
+    <tr>
+        <td class="rowkey">Deleted By</td>
+        <td>${userId}</td>
+    </tr>
+    <tr>
+        <td class="rowkey">Source</td>
+        <td>${source}</td>
+    </tr>
+</table>
 
 <br><br>
 </body>
